--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/SmartPlatformLandingPage.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/SmartPlatformLandingPage.css
@@ -20,7 +20,28 @@
 .SPL-LandingPage-Section7-Background2 {
     position: absolute;
     left: 1045.35px;
-    top: 4702px;
+    top: 4719px;
     width: 238.23px;
     height: 381.62px;
+}
+
+@media screen and (max-width: 1440px) {
+    .SPL-LandingPage-Section7-Background2 {
+        left: 66.8vw;
+        top: 4750px;
+    }
+}
+
+@media screen and (max-width: 1300px) and (max-height: 900px) {
+    .SPL-LandingPage-Section7-Background2 {
+        left: 69.3vw;
+        top: 4655px;
+    }
+}
+
+@media screen and (max-width: 1300px) and (min-height: 910px) {
+    .SPL-LandingPage-Section7-Background2 {
+        left: 69.3vw;
+        top: 4805px;
+    }
 }
