--- a/src/components/Card/SPL Landing Page/CardSPLLandingPage.css
+++ b/src/components/Card/SPL Landing Page/CardSPLLandingPage.css
@@ -34,3 +34,21 @@
     color: #d23d3d;
     border: 1px solid #d23d3d;
 }
+
+@media screen and (max-width: 1400px) {
+    #CardSPLLandingPage {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    #CardSPLLandingPage {
+        transform: scale(0.8);
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    #CardSPLLandingPage {
+        transform: scale(0.8);
+    }
+}
