--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section2/Smart-Platform-LandingPage-Section2.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section2/Smart-Platform-LandingPage-Section2.css
@@ -26,3 +26,27 @@
     display: flex;
     margin-top: 39px;
 }
+
+@media screen and (max-width: 1400px) {
+    .SPL-LandingPage-Section2-Card-Container {
+        margin-left: -40px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .SPL-LandingPage-Section2-Card-Container {
+        margin-left: -40px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .SPL-LandingPage-Section2-Card-Container {
+        margin-left: -90px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .SPL-LandingPage-Section2-Card-Container {
+        margin-left: -75px;
+    }
+}
