--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
@@ -74,6 +74,14 @@
     }
 }
 
+@media screen and (max-width: 1400px) {
+    .SPL-LandingPage-Section4-Scroll-Container-Responsive {
+        position: absolute;
+        z-index: 1;
+        transform: scale(0.87);
+    }
+}
+
 @media screen and (max-width: 1300px) {
     .SPL-LandingPage-Section4-Background {
         left: 10vw;
@@ -86,6 +94,22 @@
     .SPL-LandingPage-Section4-Scroll-Container-Responsive {
         position: absolute;
         z-index: 1;
-        transform: scale(0.87);
+        transform: scale(0.83);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .SPL-LandingPage-Section4-Scroll-Container-Responsive {
+        position: absolute;
+        z-index: 1;
+        transform: scale(0.79);
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .SPL-LandingPage-Section4-Scroll-Container-Responsive {
+        position: absolute;
+        z-index: 1;
+        transform: scale(0.765);
     }
 }
