--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section5/Smart-Platform-LandingPage-Section5.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section5/Smart-Platform-LandingPage-Section5.css
@@ -13,10 +13,6 @@
     border-radius: 5px;
 }
 
-.SPL-LandingPage-Section5-Content-Vector-Container {
-    display: flex;
-}
-
 .SPL-LandingPage-Section5-Content-Container h1 {
     text-align: center;
     text-transform: uppercase;
@@ -88,11 +84,56 @@
     }
 }
 
+@media screen and (max-width: 1400px) {
+    .SPL-LandingPage-Section5-Content-Container {
+        margin-left: 55px;
+    }
+}
+
 @media screen and (max-width: 1300px) {
     .SPL-LandingPage-Section5-Content-Container-Responsive {
         transform: scale(0.85);
+        border: 1px solid red;
     }
     .SPL-LandingPage-Section5-Content-Container {
         margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .SPL-LandingPage-Section5-Content-Container-Responsive {
+        margin-left: -20px;
+    }
+    .SPL-LandingPage-Section5-Content-Container {
+        width: calc(1253px * 0.9);
+        height: calc(468px * 0.9);
+    }
+
+    .SPL-LandingPage-Section5-Content-Container > .row {
+        /* margin-left: -20px; */
+        transform: scale(0.9);
+        margin-top: -10px;
+    }
+    .SPL-LandingPage-Section5-Content-CostSaving1-Desc {
+        width: 340px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .SPL-LandingPage-Section5-Content-Container-Responsive {
+        margin-left: -40px;
+    }
+    .SPL-LandingPage-Section5-Content-Container {
+        width: calc(1253px * 0.85);
+        height: calc(468px * 0.85);
+    }
+
+    .SPL-LandingPage-Section5-Content-Container > .row {
+        /* margin-left: -20px; */
+        transform: scale(0.85);
+        margin-top: -10px;
+    }
+    .SPL-LandingPage-Section5-Content-CostSaving1-Desc {
+        width: 340px;
     }
 }
