--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section7/Smart-Platform-LandingPage-Section7.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section7/Smart-Platform-LandingPage-Section7.css
@@ -53,7 +53,7 @@
     .SPL-LandingPage-Section7-Background-Container {
         transform: scale(0.95);
     }
-    .SPL-LandingPage-Section7-Background{
+    .SPL-LandingPage-Section7-Background {
         margin-top: 40px;
         margin-left: 47.5vw;
     }
@@ -65,5 +65,35 @@
     }
     .SPL-LandingPage-Section5-Content-Container {
         margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .SPL-LandingPage-Section7-Background-Container {
+        transform: scale(0.75);
+    }
+    .SPL-LandingPage-Section7-Background {
+        margin-top: 146px;
+        margin-left: 47.5vw;
+    }
+    .SPL-LandingPage-Section7-Text-Container {
+        transform: scale(0.9);
+        margin-left: -100px;
+        padding-top: 20px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .SPL-LandingPage-Section7-Background-Container {
+        transform: scale(0.75);
+    }
+    .SPL-LandingPage-Section7-Background {
+        margin-top: 146px;
+        margin-left: 47.5vw;
+    }
+    .SPL-LandingPage-Section7-Text-Container {
+        transform: scale(0.9);
+        margin-left: -100px;
+        padding-top: 20px;
     }
 }
