add animation contact us

--- a/src/container/1. Smart-Platform/Smart-Platform-ContactUs/Smart-Platform-ContactUs-Section1/Smart-Platform-ContactUs-Section1.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-ContactUs/Smart-Platform-ContactUs-Section1/Smart-Platform-ContactUs-Section1.css
@@ -1,7 +1,8 @@
 #SPL-ContactUs-Section1 {
     height: 856px;
     width: 100vw;
-    border: 1px solid red;
+    /* if i remove this border, it will be error on margin top content container  */
+    border: 1px solid transparent;
     padding-left: 144px;
     padding-right: 100px;
 }
