bigview navbar done

--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,13 @@
 }
 
 @font-face {
-    font-family: poppins-900;
+    font-family: poppins-800;
     src: url("src/font/Poppins/Poppins-ExtraBold.ttf");
+}
+
+@font-face {
+    font-family: poppins-900;
+    src: url("src/font/Poppins/Poppins-Black.ttf");
 }
 
 @font-face {
