--- a/src/components/Navbar/Big View/NavbarBigView.css
+++ b/src/components/Navbar/Big View/NavbarBigView.css
@@ -4,6 +4,16 @@
     background: #ffffff;
     box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.12);
     border-radius: 93px;
+    transition: all 0.3s ease-in-out;
+}
+
+#navbarBigViewScroll {
+    width: 90.2vw;
+    height: 100px;
+    background: transparent;
+    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.12);
+    border-radius: 93px;
+    transition: all 0.3s ease-in-out;
 }
 
 .bigViewNavbarLogo-container {
@@ -22,6 +32,14 @@
 
 .bigViewNavbarMenu {
     color: black;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: poppins-500;
+    line-height: 21px;
+}
+
+.bigViewNavbarMenuScroll {
+    color: white;
     text-decoration: none;
     font-size: 14px;
     font-family: poppins-500;
