add footer big view landingpage

--- a/src/components/Footer/Big-View/FooterBigView.css
+++ b/src/components/Footer/Big-View/FooterBigView.css
@@ -1,6 +1,6 @@
 #SPL-LandingPage-FooterBigView {
     height: 100px;
-    background-color: #d34a4a;
+    background-color: #515252;
 }
 
 #SPL-LandingPage-FooterBigView > p {
