--- a/src/components/Navbar/Big View/NavbarBigView.css
+++ b/src/components/Navbar/Big View/NavbarBigView.css
@@ -152,7 +152,7 @@
 }
 
 .bigViewButtonFreeTrial-container {
-    margin-left: 5px;
+    margin-left: 10px;
 }
 
 .bigViewButtonFreeTrial {
@@ -167,7 +167,7 @@
 }
 
 .bigViewButtonDemoApps-container {
-    margin-left: 15px;
+    margin-left: 10px;
 }
 
 .bigViewButtonDemoApps {
@@ -179,4 +179,37 @@
 .bigViewButtonDemoApps:hover {
     background-color: #009ffd;
     color: white;
+}
+
+@media screen and (max-width: 1440px) {
+    .bigViewNavbarLogo-container {
+        margin-left: 40px;
+    }
+    .bigViewButton-Container {
+        margin-left: 200px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .bigViewNavbarLogo-container {
+        margin-left: 30px;
+    }
+    .bigViewButton-Container {
+        margin-left: 180px;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .bigViewNavbarLogo-container {
+        margin-left: 20px;
+    }
+    .bigViewButton-Container {
+        margin-left: 100px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
