--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section1/BigView-LandingPage-Section1.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section1/BigView-LandingPage-Section1.css
@@ -69,3 +69,25 @@
     color: #009ffd;
     background-color: white;
 }
+
+@media screen and (max-width: 1440px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewLandingPage-Content-Container {
+        margin-left: 90px;
+    }
+    .BigViewLandingPage-Section1-Background2 {
+        transform: scale(0.9);
+        margin-left: 760px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
