Big View Landing Page Section3 Responsive Desktop

--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section3/BigView-LandingPage-Section3.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section3/BigView-LandingPage-Section3.css
@@ -20,6 +20,29 @@
     padding-right: 80px;
 }
 
-.BigViewLandingPage-Section3-Card-Container{
+.BigViewLandingPage-Section3-Card-Container {
     margin-top: 65px;
+}
+
+@media screen and (max-width: 1440px) {
+    .BigViewLandingPage-Section3-Card-Container {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewLandingPage-Section3-Card-Container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
