--- a/src/components/Card/Big View/Big View Landinpage/CardBigViewLandingpageSection3.css
+++ b/src/components/Card/Big View/Big View Landinpage/CardBigViewLandingpageSection3.css
@@ -53,3 +53,26 @@
     padding-left: 32px;
     padding-left: 33px;
 }
+
+@media screen and (max-width: 1440px) {
+    #CardBigViewLandingpageSection3 {
+        transform: scale(0.95);
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    #CardBigViewLandingpageSection3 {
+        transform: scale(0.9);
+        margin-right: 0px;
+        margin-left: -10px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
