--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section4/BigView-LandingPage-Section4.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section4/BigView-LandingPage-Section4.css
@@ -55,11 +55,35 @@
     font-family: poppins-700;
     text-align: center;
     margin-top: 48px;
-    transition: all 0.3s ease-in-out    ;
+    transition: all 0.3s ease-in-out;
 }
 
 .BigViewLandingPage-Section4-Button:hover {
     background-color: white;
     border: 1px solid #009ffd;
     color: #009ffd;
+}
+
+@media screen and (max-width: 1440px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewLandingPage-Section4-Background-Container {
+        margin-left: 100px;
+    }
+    .BigViewLandingPage-Section4-Background {
+        transform: scale(0.9);
+    }
+    .BigViewLandingPage-Section4-Text-Container {
+        padding-left: 660px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
