--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section7/BigView-LandingPage-Section7.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section7/BigView-LandingPage-Section7.css
@@ -83,3 +83,28 @@
     color: #009ffd;
     border: 1px solid #009ffd;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigViewLandingPage-Section7-Background {
+        left: 780px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewLandingPage-Section7-Text-Container {
+        left: 100px;
+    }
+    .BigViewLandingPage-Section7-Background {
+        left: 680px;
+    }
+
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
