--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section8/BigView-LandingPage-Section8.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section8/BigView-LandingPage-Section8.css
@@ -198,6 +198,30 @@
     color: #ffffff;
 }
 
-.BigViewLandingPage-Section8-Car3-Button{
+.BigViewLandingPage-Section8-Car3-Button {
     margin-top: 50px;
+}
+
+@media screen and (max-width: 1440px) {
+    .BigViewLandingPage-Section8-Card1 {
+        margin-left: 110px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewLandingPage-Section8-Card-Container {
+        transform: scale(0.95);
+    }
+    .BigViewLandingPage-Section8-Card1 {
+        margin-left: 40px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
