--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section9/BigView-LandingPage-Section9.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section9/BigView-LandingPage-Section9.css
@@ -14,9 +14,6 @@
     font-family: poppins-800;
     font-size: 50px;
     line-height: 70px;
-    /* or 140% */
-
-    /* Big View Main */
 
     color: #2c2c2c;
 }
@@ -52,7 +49,7 @@
     margin-left: 65px;
 }
 
-.BigViewLandingPage-Section9-Content2-Container{
+.BigViewLandingPage-Section9-Content2-Container {
     margin-left: 120px;
 }
 
@@ -61,4 +58,32 @@
     display: flex;
     justify-content: center;
     margin-top: 50px;
+}
+
+@media screen and (max-width: 1440px) {
+    .BigViewLandingPage-Section9-Title {
+        margin-left: 100px;
+    }
+    .BigViewLandingPage-Section9-Content-row1-Container {
+        margin-left: 100px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewLandingPage-Section9-Content-row1-Container {
+        transform: scale(0.9);
+        margin-left: 40px;
+    }
+    .BigViewLandingPage-Section9-Content-row2-Container {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
