--- a/src/container/2. BigView/BigView-LandingPage/BigViewLandingPage.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigViewLandingPage.css
@@ -14,3 +14,18 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 1440px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
