big view landing page carousel fix

--- a/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section5/BigView-LandingPage-Section5.css
+++ b/src/container/2. BigView/BigView-LandingPage/BigView-LandingPage-Section5/BigView-LandingPage-Section5.css
@@ -1,5 +1,5 @@
 #BigViewLandingPage-Section5 {
-    height: 1087px;
+    height: 987px;
     border: 1px solid red;
 }
 
@@ -45,38 +45,11 @@
     padding-right: 31.56px;
 }
 
-/* .BigViewLandingPage-Section5-Card-Important {
-    width: 380px;
-    height: 450px;
-    background: #ffffff;
-    border: 3px solid rgba(71, 71, 71, 0.1);
-    box-sizing: border-box;
-    box-shadow: 25px 25px 25px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    transition: all 0.4s ease-in-out;
+.BigViewLandingPage-Section5-Carousel-Container {
+    margin-top: 0px;
+    padding-left: 70px;
+    padding-right: 70px;
 }
-
-.BigViewLandingPage-Section5-Card-Important > img {
-    width: 150px;
-    height: 150px;
-    margin-left: 40px;
-    margin-top: 40px;
-}
-
-.BigViewLandingPage-Section5-Card-Important > h4 {
-    font-family: poppins-700;
-    font-size: 24px;
-    margin-top: 30px;
-    margin-left: 40px;
-}
-
-.BigViewLandingPage-Section5-Card-Important > p {
-    font-family: poppins-400;
-    font-size: 18px;
-    margin-top: 10px;
-    padding-left: 40px;
-    padding-right: 40px;
-} */
 
 .BigViewLandingPage-Section5-Card {
     width: 300px;
@@ -87,3 +60,38 @@
     border-radius: 7.91111px;
     transition: all 0.4s ease-in-out;
 }
+
+/* square buttons */
+.rec.rec-arrow {
+    border-radius: 50%;
+    background-color: white;
+    color: #009ffd;
+    border: 3px solid #009ffd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+/* round buttons on hover */
+.rec.rec-arrow:focus:enabled {
+    border-radius: 50%;
+    background-color: white;
+    color: #009ffd;
+    border: 3px solid #009ffd;
+}
+
+.rec.rec-arrow-left > a {
+    margin-top: -100px;
+}
+
+.rec.rec-arrow-left:hover:enabled,
+.rec.rec-arrow-right:hover:enabled {
+    background-color: #009ffd;
+    border: 3px solid #009ffd;
+    color: white;
+}
+
+/* hide disabled buttons */
+.rec.rec-arrow:disabled {
+    visibility: hidden;
+}
+/* disable default outline on focused items */
