--- a/src/container/2. BigView/BigView-AboutUs/BigView-AboutUs-Section1/BigView-AboutUs-Section1.css
+++ b/src/container/2. BigView/BigView-AboutUs/BigView-AboutUs-Section1/BigView-AboutUs-Section1.css
@@ -72,3 +72,22 @@
 .BigViewAboutUs-Section1-Desc2 > span {
     font-family: poppins-700;
 }
+
+@media screen and (max-width: 1440px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigViewAboutUs-Section1-Content-Container {
+        transform: scale(0.95);
+        left: 30px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
