--- a/src/container/2. BigView/BigView-Login/BigViewLogin.css
+++ b/src/container/2. BigView/BigView-Login/BigViewLogin.css
@@ -1,5 +1,5 @@
 #BigViewLogin {
-    height: 100vh;
+    height: 1024px;
     width: 100vw;
     display: flex;
 }
@@ -7,7 +7,6 @@
 .BigViewLogin-content-container-left {
     z-index: 2;
     width: 54.5%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -121,13 +120,13 @@
 
 .BigViewLogin-content-container-right {
     width: 45.5%;
-    display: block;
+    height: 1024px;
 }
 
 .BigViewLogin-content-right-Background1 {
     z-index: -4;
     width: 100%;
-    height: 100%;
+    height: 1024px;
     position: absolute;
     background: #2c2c2c;
 }
@@ -144,7 +143,7 @@
     z-index: -2;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 1024px;
     background: linear-gradient(90deg, #1c1c1c 5.21%, rgba(36, 35, 35, 0) 31.77%, rgba(32, 32, 32, 0) 67.71%, #1c1c1c 94.79%);
     border-radius: 10px 0px 0px 10px;
 }
