--- a/src/container/2. BigView/BigView-Login/BigViewLogin.css
+++ b/src/container/2. BigView/BigView-Login/BigViewLogin.css
@@ -1,5 +1,5 @@
 #BigViewLogin {
-    height: 1024px;
+    height: 100vh;
     width: 100vw;
     display: flex;
 }
@@ -7,6 +7,7 @@
 .BigViewLogin-content-container-left {
     z-index: 2;
     width: 54.5%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -120,13 +121,13 @@
 
 .BigViewLogin-content-container-right {
     width: 45.5%;
-    height: 1024px;
+    display: block;
 }
 
 .BigViewLogin-content-right-Background1 {
     z-index: -4;
     width: 100%;
-    height: 1024px;
+    height: 100%;
     position: absolute;
     background: #2c2c2c;
 }
@@ -143,12 +144,13 @@
     z-index: -2;
     position: absolute;
     width: 100%;
-    height: 1024px;
+    height: 100%;
     background: linear-gradient(90deg, #1c1c1c 5.21%, rgba(36, 35, 35, 0) 31.77%, rgba(32, 32, 32, 0) 67.71%, #1c1c1c 94.79%);
     border-radius: 10px 0px 0px 10px;
 }
 
 .BigViewLogin-content-right-Title {
+    position: absolute;
     width: 341px;
     height: 140px;
     margin-left: 80px;
@@ -161,11 +163,20 @@
 
 .BigViewLogin-content-right-vector-container {
     width: 100%;
+    height: 100%;
     display: flex;
+    align-items: flex-end;
     justify-content: center;
 }
 
 .BigViewLogin-content-right-vector {
-    width: 470px;
-    height: 641.15px;
+    width: 65%;
+    height: 74%;
+}
+
+@media screen and (max-width: 1300px) and (min-height: 900px) {
+    .BigViewLogin-content-right-vector {
+        width: 65%;
+        height: 65%;
+    }
 }
