Rapihin Big View Awal Minggu 3

--- a/src/container/2. BigView/BigView-FAQ/BigView-FAQ-Section1/BigView-FAQ-Section1.css
+++ b/src/container/2. BigView/BigView-FAQ/BigView-FAQ-Section1/BigView-FAQ-Section1.css
@@ -1,6 +1,6 @@
 #BigViewFAQ-Section1 {
     min-height: 739px;
-    border-bottom: 1px solid red;
+    margin-bottom: 30px;
 }
 
 .BigViewFAQ-Section1-Title {
