--- a/src/components/Navbar/Big Score/NavbarBigScore.css
+++ b/src/components/Navbar/Big Score/NavbarBigScore.css
@@ -137,6 +137,7 @@
 .BigScoreButtonContactUs {
     background: white;
     color: #f06522;
+    border: 1px solid #f06522;
 }
 
 .BigScoreButtonContactUs:hover {
@@ -164,14 +165,15 @@
 }
 
 .BigScoreButtonDemoApps {
-    background-color: white;
+    background-color: #515252;
     color: #f06522;
-    border: 1px solid #f06522;
+    border: 1px solid transparent;
 }
 
 .BigScoreButtonDemoApps:hover {
-    background-color: #f06522;
-    color: white;
+    background-color: white;
+    color: #f06522;
+    border: 1px solid #515252;
 }
 
 @media screen and (max-width: 1440px) {
