--- a/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section1/BigScore-LandingPage-Section1.css
+++ b/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section1/BigScore-LandingPage-Section1.css
@@ -60,3 +60,26 @@
     color: #f06522;
     border: 1px solid #f06522;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreLandingPage-Section1-Vector {
+        transform: scale(0.9);
+        left: 743px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreLandingPage-Section1-Vector {
+        transform: scale(0.8);
+        left: 613px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
