Big Score Navbar responsive desktop

--- a/src/components/Navbar/Big Score/NavbarBigScore.css
+++ b/src/components/Navbar/Big Score/NavbarBigScore.css
@@ -178,7 +178,7 @@
 
 @media screen and (max-width: 1440px) {
     .BigScoreNavbarLogo-container {
-        margin-left: 40px;
+        padding-left: 100px;
     }
     .BigScoreButton-Container {
         margin-left: 200px;
@@ -187,7 +187,7 @@
 
 @media screen and (max-width: 1400px) {
     .BigScoreNavbarLogo-container {
-        margin-left: 30px;
+        padding-left: 70px;
     }
     .BigScoreButton-Container {
         margin-left: 180px;
