section 3 done responsive desktop

--- a/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section3/BigScore-LandingPage-Section3.css
+++ b/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section3/BigScore-LandingPage-Section3.css
@@ -60,3 +60,24 @@
     line-height: 30px;
     color: #ffffff;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreLandingPage-Section3-Content-Container {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreLandingPage-Section3-Content-Container {
+        transform: scale(0.8);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
