--- a/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section4/BigScore-LandingPage-Section4.css
+++ b/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section4/BigScore-LandingPage-Section4.css
@@ -63,6 +63,33 @@
     color: #000000;
 }
 
-.BigScoreLandingPage-Section4-Text-Row2{
+.BigScoreLandingPage-Section4-Text-Row2 {
     margin-top: 10px;
+}
+
+@media screen and (max-width: 1440px) {
+    .BigScoreLandingPage-Section4-Content-Container {
+        border: 1px solid red;
+    }
+    .BigScoreLandingPage-Section4-Vector {
+        transform: scale(0.9);
+        left: 600px;
+        top: 80px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreLandingPage-Section4-Content-Container {
+        border: 1px solid red;
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
