--- a/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section5/BigScore-LandingPage-Section5.css
+++ b/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section5/BigScore-LandingPage-Section5.css
@@ -52,3 +52,17 @@
     border: 1px solid #f06522;
     color: #f06522;
 }
+@media screen and (max-width: 1440px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
