--- a/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section6/BigScore-LandingPage-Section6.css
+++ b/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section6/BigScore-LandingPage-Section6.css
@@ -93,3 +93,24 @@
     border: 1px solid #f06522;
     color: #f06522;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreLandingPage-Section6-Vector {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .BigScoreLandingPage-Section6-Content-Container {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1300px) {
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
