--- a/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section7/BigScore-LandingPage-Section7.css
+++ b/src/container/3. BigScore/BigScore-LandingPage/BigScore-LandingPage-Section7/BigScore-LandingPage-Section7.css
@@ -78,3 +78,24 @@
     left: 1025px;
     top: 251px;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreLandingPage-Section7-Vector-Container {
+        transform: scale(0.95);
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreLandingPage-Section7-Vector-Container {
+        transform: scale(0.85);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
