section 1 done responsive desktop

--- a/src/container/3. BigScore/BigScore-AboutUs/BigScore-AboutUs-Section1/BigScore-AboutUs-Section1.css
+++ b/src/container/3. BigScore/BigScore-AboutUs/BigScore-AboutUs-Section1/BigScore-AboutUs-Section1.css
@@ -74,3 +74,25 @@
     left: 690px;
     top: 46px;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreAboutUs-Section1-Vector2 {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreAboutUs-Section1-Container-Content {
+        transform: scale(0.9);
+        top: 155px;
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
