--- a/src/container/3. BigScore/BigScore-AboutUs/BigScore-AboutUs-Section3/BigScore-AboutUs-Section3.css
+++ b/src/container/3. BigScore/BigScore-AboutUs/BigScore-AboutUs-Section3/BigScore-AboutUs-Section3.css
@@ -72,3 +72,25 @@
 .BigScoreAboutUs-Section3-List-Row4 {
     margin-top: 10px;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreAboutUs-Section3-Vector {
+        transform: scale(0.9);
+        left: 640px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreAboutUs-Section3-Content-Container {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
