--- a/src/container/3. BigScore/BigScore-AboutUs/BigScore-AboutUs-Section4/BigScore-AboutUs-Section4.css
+++ b/src/container/3. BigScore/BigScore-AboutUs/BigScore-AboutUs-Section4/BigScore-AboutUs-Section4.css
@@ -11,3 +11,24 @@
     line-height: 100px;
     color: #2a9c94;
 }
+
+@media screen and (max-width: 1440px) {
+    .BigScoreAboutUs-Section4-Title {
+        transform: scale(0.9);
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+    .BigScoreAboutUs-Section4-Title {
+        transform: scale(0.8);
+    }
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
+}
