kecilin spl landing page done

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section6/Smart-Platform-LandingPage-Section6.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section6/Smart-Platform-LandingPage-Section6.css
@@ -11,6 +11,12 @@
     text-transform: uppercase;
 }
 
+.SPL-LandingPage-Section6-Content-Logo-Container {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
 .SPL-LandingPage-Section6-andMore {
     text-align: center;
     font-family: poppins-700;
