--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
@@ -70,7 +70,12 @@
     .SPL-LandingPage-Section4-Scroll-Container-Responsive {
         position: absolute;
         z-index: 1;
-        transform: scale(0.94);
+        transform: scale(0.9);
+    }
+    .SPL-LandingPage-Section4-Background {
+        z-index: 0;
+        transform: scale(0.8);
+        left: 23vw;
     }
 }
 
@@ -78,7 +83,7 @@
     .SPL-LandingPage-Section4-Scroll-Container-Responsive {
         position: absolute;
         z-index: 1;
-        transform: scale(0.87);
+        transform: scale(0.83);
     }
 }
 
@@ -88,13 +93,13 @@
     }
     .SPL-LandingPage-Section4-Background {
         z-index: 0;
-        transform: scale(0.8);
+        transform: scale(0.75);
         left: 18vw;
     }
     .SPL-LandingPage-Section4-Scroll-Container-Responsive {
         position: absolute;
         z-index: 1;
-        transform: scale(0.83);
+        transform: scale(0.77);
     }
 }
 
