--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section5/Smart-Platform-LandingPage-Section5.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section5/Smart-Platform-LandingPage-Section5.css
@@ -2,12 +2,17 @@
     height: 475px;
 }
 
+.SPL-LandingPage-Section5-Content-Container-Responsive {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
 .SPL-LandingPage-Section5-Content-Container {
     margin-top: 46px;
     width: 1253px;
     height: 468px;
     background-color: #f7f7f7;
-    margin-left: 139px;
     border: 1px solid transparent;
     box-shadow: 0px 0px 0px 4px rgba(0, 0, 0, 0.26);
     border-radius: 5px;
@@ -79,9 +84,6 @@
     .SPL-LandingPage-Section5-Content-Container-Responsive {
         transform: scale(0.95);
     }
-    .SPL-LandingPage-Section5-Content-Container {
-        margin-left: 105px;
-    }
 }
 
 @media screen and (max-width: 1400px) {
@@ -93,10 +95,6 @@
 @media screen and (max-width: 1300px) {
     .SPL-LandingPage-Section5-Content-Container-Responsive {
         transform: scale(0.85);
-        border: 1px solid red;
-    }
-    .SPL-LandingPage-Section5-Content-Container {
-        margin-left: 10px;
     }
 }
 
