--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section7/Smart-Platform-LandingPage-Section7.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section7/Smart-Platform-LandingPage-Section7.css
@@ -1,13 +1,14 @@
-#SPL-LandingPage-Section7 {
+/* #SPL-LandingPage-Section7 {
     height: 373px;
     background-color: #484848;
+    position: relative;;
 }
 
 .SPL-LandingPage-Section7-Background {
     position: absolute;
     width: 794.42px;
-    margin-left: 740.86px;
-    margin-top: 23px;
+    left: 0px;
+    top: 23px;
 }
 
 .SPL-LandingPage-Section7-Title {
@@ -54,7 +55,7 @@
         transform: scale(0.95);
     }
     .SPL-LandingPage-Section7-Background {
-        margin-top: 40px;
+        margin-top: 19px;
         margin-left: 47.5vw;
     }
 }
@@ -96,4 +97,110 @@
         margin-left: -100px;
         padding-top: 20px;
     }
+} */
+
+#SPL-LandingPage-Section7 {
+    width: 100vw;
+    height: 373px;
+    background: #484848;
+    position: relative;
+}
+
+.SPL-LandingPage-Section7-Title {
+    position: absolute;
+    width: 542px;
+    height: 120px;
+    left: 137px;
+    top: 79px;
+    font-family: poppins-700;
+    font-size: 40px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.SPL-LandingPage-Section7-Button-Container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    position: absolute;
+    width: 321px;
+    height: 66px;
+    left: 137px;
+    top: 240px;
+}
+
+.SPL-LandingPage-Section7-Button {
+    position: absolute;
+    width: 321px;
+    height: 47px;
+    left: 0px;
+    top: 10px;
+    background: #d23d3d;
+    border-radius: 65px;
+    border: 1px solid transparent;
+    font-family: poppins-700;
+    font-size: 17px;
+    line-height: 140%;
+    letter-spacing: 0.005em;
+    color: #ffffff;
+}
+
+.SPL-LandingPage-Section7-Background1 {
+    position: absolute;
+    width: 794.42px;
+    bottom: 0;
+    right: 0;
+}
+
+.SPL-LandingPage-Section7-Background2-Container {
+    width: 794.42px;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 10;
+    right: 0;
+}
+
+.SPL-LandingPage-Section7-Background2 {
+    width: 238.24px;
+    height: 381.62px;
+    margin-top: 21px;
+    margin-left: 52px;
+}
+
+@media screen and (max-width: 1440px) {
+    .SPL-LandingPage-Section7-Title {
+        left: 90px;
+    }
+    .SPL-LandingPage-Section7-Button-Container {
+        left: 100px;
+    }
+    .SPL-LandingPage-Section7-Background1 {
+        width: calc(0.9 * 794.42px);
+    }
+    .SPL-LandingPage-Section7-Background2-Container {
+        width: calc(0.9 * 794.42px);
+        /* border: 1px solid blue; */
+    }
+    .SPL-LandingPage-Section7-Background2 {
+        width: calc(0.9 * 238.24px);
+        height: calc(0.9 * 381.62px);
+        margin-top: 57px;
+        margin-left: 49px;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1300px) {
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 1100px) {
 }
